--- a/src/main/resources/contexts/dev.yaml
+++ b/src/main/resources/contexts/dev.yaml
@@ -4,3 +4,8 @@ dev:
   author.login: admin
   author.password: admin
   login.token.name: login-token
+  
+  publish.url: http://localhost:443
+  publish.ip: http://127.0.0.1:443  
+  publish.login: admin
+  publish.password: admin
